--- a/src/index.pug
+++ b/src/index.pug
@@ -6,13 +6,13 @@ html(lang="en")
     meta(http-equiv="X-UA-Compatible", content="ie=edge")
     link(rel="stylesheet", href="style.css")
     link(rel="shortcut icon",href="public/img/favicon.ico")
-    title Git Intro Workshop | @dannycho7 
+    title Git Intro Workshop | @akshayheda 
   body
     .reveal
       .slides
         include content.pug
     #hidden(style='display:none;')
       #header
-        #header-left @dannycho7
+        #header-left @akshayheda
     script(src="public/reveal.js")
     script(src="script.js")
