--- a/src/content.pug
+++ b/src/content.pug
@@ -8,15 +8,11 @@
 - pink='rgb(255, 163, 187)'
 section(data-background=yellow)
   .columns.is-vcentered
-    .column.is-half
-      img(src='https://dannycho.net/img/Campus_Point_Square.jpg')
     .column.is-half.project
       .is-left.has-text-left(style=`background-color:${yellow2}; padding: 20px;`)
-        h3 Danny Hyun Cho
+        h3 Akshay Heda
         div.is-size-5
-          p 🚩 GitHub Campus Expert
-          p 🛩 South Korea 🇰🇷
-          p 💻 Avid hacker and tinkerer
+          p 💻 Avid hacker
           p 🔨 Builds things
           p 👨‍🎓 Computer Science Student
 section(data-background=orange)
@@ -153,13 +149,10 @@ section
 section(data-background-iframe="https://githubcampus.expert/")
 section(data-background=yellow)
   .columns.is-vcentered
-    .column.is-half
-      img(src='https://dannycho.net/img/Campus_Point_Square.jpg')
     .column.is-half.project
       .is-left.has-text-left(style=`background-color:${yellow2}; padding: 20px;`)
         h3 Thank you!
         div.is-size-5
-          p Email: hello@dannycho.net
-          p LinkedIn: @dannycho7
-          p GitHub: @dannycho7
-          p Web: dannycho.net
+          p Email: akshayheda@gmail.com
+          p LinkedIn: @akshayheda
+          p GitHub: @akshayheda
